# cachetic

./: Makefile  README.md  pyproject.toml  requirements-all.txt  requirements.txt
cachetic/: __init__.py
cachetic/extensions/: mongodb.py
cachetic/types/: cache_protocol.py
tests/: conftest.py  test_mongo_cache.py  test_object_types.py  test_readme_usages.py  test_redis_cache.py  test_usage.py
