[project]
name = "cachetic"
version = "0.1.0"
description = "Simple cache with pydantic."
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "diskcache (>=5,<6)",
  "redis (>=5,<6)",
  "pydantic (>=2,<3)",
  "pydantic-settings (>=2,<3)",
]

[tool.poetry.group.dev.dependencies]
codepress = "^0.1.1"
pytest = "^8.3.4"
mkdocs-material = "^9.6.5"
black = "^25.1.0"
isort = "^6.0.0"
poetry-plugin-export = "^1.9.0"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
